fixed text overflow and animation on main page

--- a/style.css
+++ b/style.css
@@ -31,6 +31,17 @@ body{
 }
 
 
+
+
+
+
+
+
+
+
+
+
+
 @media only screen and (max-width: 540px){
 
   
@@ -50,11 +61,20 @@ body{
       justify-content: flex-start;
     }
     
+    
     .welcome-wrapper{
       margin-top: 20px;
       position:relative;
       z-index: 1;
+      height:60vh;
       } 
+      .welcome-wrapper> .main-title{
+        min-width: 100vw;
+        max-width: 100vw;
+      }
+      .welcome-wrapper> .main-title >h1{
+            font-size: 12vmin;
+      }
 
 
       .profile-pic{
@@ -66,18 +86,41 @@ body{
         min-width:150%;
       } 
     .wrapper{
+      padding-left: 5vw;
+      text-align: start;
+      position: absolute;
+      bottom: 50px;
+      /* left:-12vw; */
 
-      margin-top: 25vh;
-      margin-right:15vw;
-    display: flex;
+      min-width: 90vw;
+      max-width: 100vw;
+
+      /* margin-right:15vw; */
+    /* display: flex; */
     flex-direction: column;
 
 
     }
 
-    .wrapper>p{
-      align-self: flex-start;
+    .wrapper2{
+      margin-left: -10px;
+      text-align: start;
+      position: absolute;
+      bottom: 0;
+      /* left:-12vw; */
+
+      min-width: 90vw;
+      max-width: 100vw;
     }
+
+    .wrapper>p{
+      margin-block-start: 0em;
+      margin-block-end: 0em;
+    }
+
+    /* #line-1{
+      text-align: start;
+    } */
 
 
 
@@ -93,6 +136,25 @@ body{
   .swiper-pagination-vertical.swiper-pagination-bullets, .swiper-vertical>.swiper-pagination-bullets {
       top:97%
   }
+
+  @keyframes animated-text__1 {
+    from {
+      width: 0;
+    }
+    to {
+      width: 13rem;
+    }
+  }
+  
+  @keyframes animated-text__2 {
+    from {
+      width: 0;
+    }
+    to {
+      width: 18rem;
+    }
+  }
+
 }
 
 
@@ -135,6 +197,30 @@ body{
   .wrapper>p{
     align-self: flex-start;
   }
+
+
+
+
+
+
+  @keyframes animated-text__1 {
+    from {
+      width: 0;
+    }
+    to {
+      width: 13rem;
+    }
+  }
+  
+  @keyframes animated-text__2 {
+    from {
+      width: 0;
+    }
+    to {
+      width: 18rem;
+    }
+  }
+
 } 
 
 
@@ -171,6 +257,29 @@ body{
     width: 100%;
     height: 100%;
   }
+
+
+
+
+
+  @keyframes animated-text__1 {
+    from {
+      width: 0;
+    }
+    to {
+      width: 25rem;
+    }
+  }
+  
+  @keyframes animated-text__2 {
+    from {
+      width: 0;
+    }
+    to {
+      width: 25rem;
+    }
+  }
+
 }
 
 
@@ -213,6 +322,7 @@ body{
 }
 
 
+
 /*Scrollbar*/
 .swiper-pagination-bullet {
     margin-bottom: 30px;
@@ -241,6 +351,35 @@ body{
    
 }
 
+.main-title{
+  position: relative;
+  z-index: 1;
+}
+.main-title>h1{
+    color: rgb(237, 177, 93);
+    font-size: 15vmin;
+
+    
+    font-family: 'Unbounded', cursive;
+    font-weight: bolder;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .home{
     background-color: #1C1C1C;
@@ -263,13 +402,9 @@ body{
 
 
 .welcoming{
-    white-space: nowrap; /* keep text in one line */
-    overflow: hidden; /* hide text behind the cursor */
-    margin: 0.5rem auto;
     font-family: 'Unbounded', cursive;
-
     font-size: 2rem;
-    font-weight: bold;
+    font-weight: bolder;
     color:   #7bc5cf ; 
 }
 
@@ -278,7 +413,7 @@ body{
   #line-3 {
     white-space: nowrap; /* keep text in one line */
     overflow: hidden; /* hide text behind the cursor */
-    margin: 0.5rem auto;
+    margin: 1rem auto;
     font-family: "Major Mono Display", monospace;
     font-size: 1.2rem;
     font-weight: bold;
@@ -286,13 +421,13 @@ body{
   }
   
   #line-1 {
-    animation: animated-text__1 6s steps(30, end) 1s 1 normal both;
+    animation: animated-text__1 4s steps(21, end) 1s 1 normal both;
     -webkit-animation-delay: 3s;
     animation-delay: 3s;
   }
   
   #line-2 {
-    animation: animated-text__2 5s steps(30, end) 1s 1 normal both;
+    animation: animated-text__2 6s steps(29, end) 1s 1 normal both;
     -webkit-animation-delay: 7s;
     animation-delay: 7s;
   }
@@ -303,34 +438,7 @@ body{
 
 
   
-  @keyframes animated-text__1 {
-    from {
-      width: 0;
-    }
-    to {
-      width: 25rem;
-    }
-  }
   
-  @keyframes animated-text__2 {
-    from {
-      width: 0;
-    }
-    to {
-      width: 25rem;
-    }
-  }
-
-
-
-
-
-
-
-
-
-
-
 
 
   .arrows {
@@ -386,6 +494,32 @@ body{
     -webkit-animation-delay:0s; /* Safari 和 Chrome */
   }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .about{
     background-color:#1a1c1e;
     background-image: linear-gradient(45deg, #1f2523 0%, #050805 100%);
@@ -394,6 +528,36 @@ body{
   width:50vw
 }
 
+.fa-user-tie{
+  font-size: x-large;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .projects{
     background-color: #2a2c3a;
     background-image: linear-gradient(45deg, #23242c 0%, #1a1b23 100%);
@@ -401,20 +565,6 @@ body{
     position: relative;
 }
 
-
-
-.main-title{
-  position: relative;
-  z-index: 1;
-}
-.main-title>h1{
-    color: rgb(237, 177, 93);
-    font-size: 15vmin;
-
-    
-    font-family: 'Unbounded', cursive;
-    font-weight: bolder;
-}
 
 
 
@@ -477,7 +627,7 @@ body{
 }
 
 .links>a:hover{
-    font-size: xx-large;
+    /* font-size: xx-large; */
     color: #00DFFC  ;
 }
 
@@ -506,6 +656,38 @@ body{
 
     opacity: 1;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
